build.log
Waf: Entering directory `/root/ns-3.19/build'
[ 697/1448] cxx: scratch/network-load-balance_backup.cc -> build/scratch/network-load-balance_backup.cc.1.o
[ 700/1448] cxx: scratch/network-load-balance_pop.cc -> build/scratch/network-load-balance_pop.cc.4.o
[ 701/1448] cxx: scratch/network-load-balance.cc -> build/scratch/network-load-balance.cc.5.o
[ 705/1448] cxx: utils/print-introspected-doxygen.cc -> build/utils/print-introspected-doxygen.cc.4.o
In file included from ../utils/print-introspected-doxygen.cc:9:
../utils/print-introspected-doxygen.cc: In member function 'void StaticInformation::DoGather(ns3::TypeId)':
./ns3/log.h:322:44: error: ambiguous overload for 'operator<<' (operand types are 'ns3::ParameterLogger' and 'StaticInformation*')
  322 |           ns3::ParameterLogger (std::clog) << parameters;      \
../utils/print-introspected-doxygen.cc:269:3: note: in expansion of macro 'NS_LOG_FUNCTION'
  269 |   NS_LOG_FUNCTION (this);
      |   ^~~~~~~~~~~~~~~
./ns3/log.h:409:20: note: candidate: 'ns3::ParameterLogger& ns3::ParameterLogger::operator<<(T) [with T = StaticInformation*]'
  409 |   ParameterLogger& operator<< (T param)
      |                    ^~~~~~~~
In file included from /usr/include/c++/9/iostream:39,
                 from ../utils/print-introspected-doxygen.cc:1:
/usr/include/c++/9/ostream:691:5: note: candidate: 'typename std::enable_if<std::__and_<std::__not_<std::is_lvalue_reference<_Tp> >, std::__is_convertible_to_basic_ostream<_Ostream>, std::__is_insertable<typename std::__is_convertible_to_basic_ostream<_Tp>::__ostream_type, const _Tp&, void> >::value, typename std::__is_convertible_to_basic_ostream<_Tp>::__ostream_type>::type std::operator<<(_Ostream&&, const _Tp&) [with _Ostream = ns3::ParameterLogger; _Tp = StaticInformation*; typename std::enable_if<std::__and_<std::__not_<std::is_lvalue_reference<_Tp> >, std::__is_convertible_to_basic_ostream<_Ostream>, std::__is_insertable<typename std::__is_convertible_to_basic_ostream<_Tp>::__ostream_type, const _Tp&, void> >::value, typename std::__is_convertible_to_basic_ostream<_Tp>::__ostream_type>::type = std::basic_ostream<char>&]'
  691 |     operator<<(_Ostream&& __os, const _Tp& __x)
      |     ^~~~~~~~
